# BrowniGAT

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  benchmark_plot.py  foundation_main.py  foundation_schedule.py  foundation_train.py  ingest_multimodal_data.py  main.py  pyproject.toml  requirements.txt  synbio_main.py  vnext_main.py
.github/: pull_request_template.md
config/: ai_loop_example.yaml  config.yaml  foundation_engine_example.yaml  foundation_example.yaml  real_data_example.yaml  synbio_toy.yaml  toy_config.yaml  vnext_toy.yaml
data/: string_interactions_short.csv  toy_string_interactions.tsv
docs/: APPLICATIONS.md  CODEX_FOR_OSS_APPLICATION_DRAFT.md  DEMO_WORKFLOWS.md
model/: causal_head.py  foundation_backbone.py  foundation_task_heads.py  gat_embed.py  gcn_embed.py  graphsage_embed.py  hetero_encoder.py  perturbation_decoder.py
notebooks/: demo_analysis.ipynb
results/: core_targets.csv
scripts/: ai_loop.py
tasks/: causal_ranking.py  drug_repurposing.py  perturbation_prediction.py  spatial_targeting.py  synthetic_biology.py  target_prioritization.py
tests/: test_aggregation.py  test_ai_loop.py  test_artifact_and_earlystop.py  test_benchmark_plotting.py  test_config_and_baselines.py  test_engine_runtime.py  test_experiment_scheduler.py  test_foundation_advanced_stack.py  test_foundation_trainer.py  test_foundation_workspace.py  test_real_data_ingestion.py  test_resume_and_validation.py  test_scalable_engine_components.py  test_sharding_and_retention.py  test_synbio_pipeline.py  test_vnext_pipeline.py
utils/: aggregation.py  ai_loop_utils.py  artifact_index.py  baselines.py  batch_sampler.py  benchmark.py  benchmark_plotting.py  checkpoint_catalog.py  checkpoint_retention.py  config.py  (+47 more)
(+13 files in other folders)
